# testTravelWebSiteProject

./: README.md  pyproject.toml
pages/: base_page.py  index_page.py  index_page_locators.py  login_page.py  login_page_locators.py  login_success_page.py  login_success_page_locators.py  register_success_page.py  register_success_page_locators.py
resources/: constants.py
tests/: conftest.py  test_login.py
